@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.2 2004/06/21 01:34:16 xtraeme Exp $
+@comment $NetBSD: PLIST,v 1.3 2004/11/06 21:16:15 jdolecek Exp $
 share/examples/websvn/distconfig.inc
 ${HTTPD_ROOT}/websvn/cache/tmp
 ${HTTPD_ROOT}/websvn/changes.txt
@@ -18,14 +18,28 @@ ${HTTPD_ROOT}/websvn/install.txt
 ${HTTPD_ROOT}/websvn/languages/english.inc
 ${HTTPD_ROOT}/websvn/languages/french.inc
 ${HTTPD_ROOT}/websvn/languages/german.inc
+${HTTPD_ROOT}/websvn/languages/japanese-euc.inc
+${HTTPD_ROOT}/websvn/languages/japanese-jis.inc
+${HTTPD_ROOT}/websvn/languages/japanese-sjis.inc
+${HTTPD_ROOT}/websvn/languages/japanese-utf8.inc
+${HTTPD_ROOT}/websvn/languages/korean-euc.inc
+${HTTPD_ROOT}/websvn/languages/korean-utf8.inc
 ${HTTPD_ROOT}/websvn/languages/portuguese.inc
+${HTTPD_ROOT}/websvn/languages/russian.inc
+${HTTPD_ROOT}/websvn/languages/spanish.inc
+${HTTPD_ROOT}/websvn/languages/swedish.inc
+${HTTPD_ROOT}/websvn/languages/tchinese-utf8.inc
+${HTTPD_ROOT}/websvn/languages/tchinese.inc
 ${HTTPD_ROOT}/websvn/licence.txt
 ${HTTPD_ROOT}/websvn/listing.php
 ${HTTPD_ROOT}/websvn/log.php
 ${HTTPD_ROOT}/websvn/rss.php
 ${HTTPD_ROOT}/websvn/templates.txt
+${HTTPD_ROOT}/websvn/templates/BlueGrey/blame.tmpl
+${HTTPD_ROOT}/websvn/templates/BlueGrey/compare.tmpl
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/diff.tmpl
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/directory.tmpl
+${HTTPD_ROOT}/websvn/templates/BlueGrey/e-node.png
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/file.png
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/file.tmpl
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/filec.png
@@ -34,13 +48,18 @@ ${HTTPD_ROOT}/websvn/templates/BlueGrey/files.png
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/folder.png
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/footer.tmpl
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/header.tmpl
+${HTTPD_ROOT}/websvn/templates/BlueGrey/i-node.png
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/index.tmpl
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/log.tmpl
+${HTTPD_ROOT}/websvn/templates/BlueGrey/l-node.png
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/png.js
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/repo.png
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/styles.css
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/subversion.png
+${HTTPD_ROOT}/websvn/templates/BlueGrey/t-node.png
 ${HTTPD_ROOT}/websvn/templates/BlueGrey/xml.gif
+${HTTPD_ROOT}/websvn/templates/Standard/blame.tmpl
+${HTTPD_ROOT}/websvn/templates/Standard/compare.tmpl
 ${HTTPD_ROOT}/websvn/templates/Standard/diff.tmpl
 ${HTTPD_ROOT}/websvn/templates/Standard/directory.tmpl
 ${HTTPD_ROOT}/websvn/templates/Standard/file.tmpl
@@ -50,7 +69,18 @@ ${HTTPD_ROOT}/websvn/templates/Standard/index.tmpl
 ${HTTPD_ROOT}/websvn/templates/Standard/log.tmpl
 ${HTTPD_ROOT}/websvn/templates/Standard/styles.css
 ${HTTPD_ROOT}/websvn/templates/Standard/xml.gif
+${HTTPD_ROOT}/websvn/templates/Zinn/blame.tmpl
+${HTTPD_ROOT}/websvn/templates/Zinn/compare.tmpl
+${HTTPD_ROOT}/websvn/templates/Zinn/diff.tmpl
+${HTTPD_ROOT}/websvn/templates/Zinn/directory.tmpl
+${HTTPD_ROOT}/websvn/templates/Zinn/file.tmpl
+${HTTPD_ROOT}/websvn/templates/Zinn/footer.tmpl
+${HTTPD_ROOT}/websvn/templates/Zinn/header.tmpl
+${HTTPD_ROOT}/websvn/templates/Zinn/index.tmpl
+${HTTPD_ROOT}/websvn/templates/Zinn/log.tmpl
+${HTTPD_ROOT}/websvn/templates/Zinn/styles.css
 ${HTTPD_ROOT}/websvn/wsvn.php
+@dirrm ${HTTPD_ROOT}/websvn/templates/Zinn
 @dirrm ${HTTPD_ROOT}/websvn/templates/Standard
 @dirrm ${HTTPD_ROOT}/websvn/templates/BlueGrey
 @dirrm ${HTTPD_ROOT}/websvn/templates
